[package]
name = "test_esp32"
version = "0.1.0"
authors = ["David Rebbe <1187684+ic3man5@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s2-hal = "0.3.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.3.0", features = ["esp32s2", "panic-handler", "print-uart"] }
xtensa-atomic-emulation-trap = "0.2.0"
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s2"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
